--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ pp. 167-197, 2009</div>-->
 
 <div class=publication> Verena
 Heidrich-Meisner and Christian Igel. <a
- href="http://www.machinelearning.org/archive/icml2009/papers/229.pdf">Hoeffding and
+ href="https://icml.cc/Conferences/2009/papers/229.pdf">Hoeffding and
 Bernstein Races for Selecting Policies in Evolutionary Direct Policy
 Search</a>. In L. Bottou and M. Littman, eds.: <em>Proceedings of the
 International Conference on Machine Learning (ICML 2009)</em>, pp.
