--- a/publications.html
+++ b/publications.html
@@ -33,20 +33,11 @@ scholar profile</a>.
   Workshop Track (ICLR 2018 Workshop Track)</em>, 2018
 </div>
 
-<div class=publication>
-Fabian Gieseke, Kai Polsterer, Ashish Mahabal, Christian Igel, and Tom <!--  -->
-  Heskes. Massively-Parallel Best Subset Selection for Ordinary Least-Squares Regression. <em>IEEE Symposium Series on
-Computational Intelligence (SSCI 2017)</em>, IEEE Press, in press
-</div>
 
-<div class=publication>
-Jan Kremer, Fei Sha, and Christian Igel. Robust Active Label Correction. <em>International Conference on 
-Artificial Intelligence and Statistics (AISTATS)</em>, in press
-</div>
 
- 
 <a name="y18"></a>
 <h4>2018</h4>
+
 
 <div class=publication>
 Oswin Krause, Asja Fischer and Christian Igel. 
@@ -54,6 +45,17 @@ Population-Contrastive-Divergence: Does Consistency help with RBM training?
   <em>Pattern Recognition Letters</em> <vol>102</vol>, pp. 1-7, 2018
 </div>
 
+<div class=publication>
+Jan Kremer, Fei Sha, and Christian Igel. <a href="http://proceedings.mlr.press/v84/kremer18a/kremer18a.pdf">Robust Active Label Correction</a>. <em>International Conference on 
+Artificial Intelligence and Statistics (AISTATS)</em>. <em>PMLR</em>
+  <vol>84</vol>, 2018
+</div>
+
+<div class=publication>
+Fabian Gieseke, Kai Polsterer, Ashish Mahabal, Christian Igel, and Tom <!--  -->
+  Heskes. Massively-Parallel Best Subset Selection for Ordinary Least-Squares Regression. <em>IEEE Symposium Series on
+Computational Intelligence (SSCI 2017)</em>, IEEE Press, 2018
+</div>
 
 
 <a name="y17"></a>
@@ -693,7 +695,7 @@ Diverge When Training Restricted Boltzmann Machines</a>. <em>Frontiers in Comput
 
 <div class=publication>Verena
 Heidrich-Meisner and Christian Igel. 
-<a href="http://www.machinelearning.org/archive/icml2009/papers/229.pdf">Hoeffding and
+<a href="https://icml.cc/Conferences/2009/papers/229.pdf">Hoeffding and
 Bernstein Races for Selecting Policies in Evolutionary Direct Policy
 Search</a>. In L. Bottou and M. Littman, eds.: <em>Proceedings of the International Conference on Machine
 Learning (ICML 2009)</em>, pp. 401-408, 2009
