--- a/publications.html
+++ b/publications.html
@@ -33,6 +33,14 @@ scholar profile</a>.
   Workshop Track (ICLR 2018 Workshop Track)</em>, 2018
 </div>
 
+<div class=publication>
+  Fabian Gieseke and Christian Igel.
+  Training Big Random Forests with Little Resources.
+  <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining
+  (KDD 2018)</em>, accepted
+</div>
+
+
 
 
 <a name="y18"></a>
@@ -47,7 +55,7 @@ Population-Contrastive-Divergence: Does Consistency help with RBM training?
 
 <div class=publication>
 Jan Kremer, Fei Sha, and Christian Igel. <a href="http://proceedings.mlr.press/v84/kremer18a/kremer18a.pdf">Robust Active Label Correction</a>. <em>International Conference on 
-Artificial Intelligence and Statistics (AISTATS)</em>. <em>PMLR</em>
+Artificial Intelligence and Statistics (AISTATS) , Proceedings of Machine Learning Research</em>
   <vol>84</vol>, 2018
 </div>
 
