--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,17 @@ scholar profile</a>.
 </div>
 
 <div class=publication>
+  D&iacute;dac R. Arbon&egrave;s,
+  Nataliia Y. Sergiienko
+   Markus Wagner, Boyin Ding, Oswin Krause,
+  and Christian Igel.
+  Sparse incomplete LU-decomposition for Wave Farm Designs under Realistic Conditions.
+  <em>Parallel Problem Solving from Nature (PPSN)</em>,
+  2018, accepted
+</div>
+
+
+<div class=publication>
   Fabian Gieseke and Christian Igel.
   Training Big Random Forests with Little Resources.
   <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining
