--- a/publications.html
+++ b/publications.html
@@ -35,9 +35,9 @@ scholar profile</a>.
 
 <div class=publication>
   D&iacute;dac R. Arbon&egrave;s,
-  Nataliia Y. Sergiienko
-   Markus Wagner, Boyin Ding, Oswin Krause,
-  and Christian Igel.
+  Nataliia Y. Sergiienko,
+   Boyin Ding, Oswin Krause, Christian Igel
+  and Markus Wagner.
   Sparse incomplete LU-decomposition for Wave Farm Designs under Realistic Conditions.
   <em>Parallel Problem Solving from Nature (PPSN)</em>,
   2018, accepted
