--- a/publications.html
+++ b/publications.html
@@ -24,32 +24,11 @@ scholar profile</a>.
 <a name="publications"></a>
 <h3>Contributions to journals, books, and conferences</h3>
 
-<h4>Coming soon</h4><a name="top"></a> 
-
-<div class=publication>
-  Ciprian Florescu and Christian Igel.
-  <a href="https://openreview.net/forum?id=r1R0o7yDz">Resilient Backpropagation (Rprop) for Batch-learning in TensorFlow</a>.
-  <em>6th International Conference on Learning Representations
-  Workshop Track (ICLR 2018 Workshop Track)</em>, 2018
-</div>
-
-<div class=publication>
-  D&iacute;dac R. Arbon&egrave;s,
-  Nataliia Y. Sergiienko,
-   Boyin Ding, Oswin Krause, Christian Igel
-  and Markus Wagner.
-  Sparse incomplete LU-decomposition for Wave Farm Designs under Realistic Conditions.
-  <em>Parallel Problem Solving from Nature (PPSN)</em>,
-  2018, accepted
-</div>
+<!-- <h4>Coming soon</h4><a name="top"></a> 
+-->
 
 
-<div class=publication>
-  Fabian Gieseke and Christian Igel.
-  Training Big Random Forests with Little Resources.
-  <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining
-  (KDD 2018)</em>, accepted
-</div>
+
 
 
 
@@ -65,8 +44,33 @@ Population-Contrastive-Divergence: Does Consistency help with RBM training?
 </div>
 
 <div class=publication>
+  D&iacute;dac R. Arbon&egrave;s,
+  Nataliia Y. Sergiienko,
+   Boyin Ding, Oswin Krause, Christian Igel
+  and Markus Wagner.
+  Sparse Incomplete LU-decomposition for Wave Farm Designs under Realistic Conditions.
+  <em>Parallel Problem Solving from Nature (PPSN)</em>, LNCS, Springer-Verlag, 
+  2018
+</div>
+
+<div class=publication>
+  Ciprian Florescu and Christian Igel.
+  <a href="https://openreview.net/forum?id=r1R0o7yDz">Resilient Backpropagation (Rprop) for Batch-learning in TensorFlow</a>.
+  <em>6th International Conference on Learning Representations
+  Workshop Track (ICLR 2018 Workshop Track)</em>, 2018
+</div>
+
+<div class=publication>
+  Fabian Gieseke and Christian Igel.
+  Training Big Random Forests with Little Resources.
+  <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining
+  (KDD)</em>, pp. 1445-1454, ACM Press, 2018
+</div>
+
+
+<div class=publication>
 Jan Kremer, Fei Sha, and Christian Igel. <a href="http://proceedings.mlr.press/v84/kremer18a/kremer18a.pdf">Robust Active Label Correction</a>. <em>International Conference on 
-Artificial Intelligence and Statistics (AISTATS) , Proceedings of Machine Learning Research</em>
+Artificial Intelligence and Statistics (AISTATS), Proceedings of Machine Learning Research</em>
   <vol>84</vol>, 2018
 </div>
 
@@ -75,6 +79,14 @@ Fabian Gieseke, Kai Polsterer, Ashish Mahabal, Christian Igel, and Tom <!--  -->
   Heskes. Massively-Parallel Best Subset Selection for Ordinary Least-Squares Regression. <em>IEEE Symposium Series on
 Computational Intelligence (SSCI 2017)</em>, IEEE Press, 2018
 </div>
+
+<div class=publication>
+Mathias Perslev, Akshay  Pai, Christian Igel, Erik Dam. Knee
+  Segmentation by Multiplanar Deep Learning Network – with data from
+  OAI.
+  International Workshop on Osteoarthritis Imaging, 2018
+</div>
+
 
 
 <a name="y17"></a>
