--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Professor, Dr. habil.
       <tr><td>Office address:</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Mail address:</tr>
       <tr><td>University of Copenhagen</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>University of Copenhagen</td></tr>
       <tr><td>Department of Computer Science</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Department of Computer Science</td></tr>
-      <tr><td><Universitetsparken 1</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Universitetsparken 5</td></tr>
+      <tr><td>Universitetsparken 1</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Universitetsparken 5</td></tr>
       <tr><td>2100 K&#248;benhavn &Oslash;</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>2100 K&#248;benhavn &Oslash;</td></tr>
     </tbody>
   </table>
