--- a/publications.html
+++ b/publications.html
@@ -84,7 +84,7 @@ Computational Intelligence (SSCI 2017)</em>, IEEE Press, 2018
 Mathias Perslev, Akshay  Pai, Christian Igel, Erik Dam. Knee
   Segmentation by Multiplanar Deep Learning Network – with data from
   OAI.
-  International Workshop on Osteoarthritis Imaging, 2018
+  <em>International Workshop on Osteoarthritis Imaging</em>, 2018
 </div>
 
 
