--- a/downloads.html
+++ b/downloads.html
@@ -72,7 +72,7 @@ The <a href="https://github.com/Shark-ML/Shark">Shark machine learning library</
 
 <p style="line-height:normal">
 The most recent version of Shark can be downloaded from <a
-href="http://image.diku.dk/shark">here.</a> <!-- at the SourceForge -->
+href="http://www.shark-ml.org">here.</a> <!-- at the SourceForge -->
 <!-- open source repository. -->
 </p>
 
@@ -240,7 +240,7 @@ performance.
  
  
 <h3>Source code</h3> The algorithms have been added to
-the <a href="http://shark-project.sourceforge.net">Shark machine
+the <a href="http://www.shark-ml.org/">Shark machine
 learning library</a>. There is an online tutorial explaining how to
 approximate trained SVMs.
  
@@ -304,7 +304,7 @@ plus the associated negatives, the corresponding test set 332 sequences plus the
 
 <h3>Source code</h3></a> 
 Gradient-based optimization of the kernel-target alignment 
-is available as a standard SVM model selection method in the  <a href="http://shark-project.sourceforge.net">Shark
+is available as a standard SVM model selection method in the  <a href="http://www.shark-ml.org">Shark
 library</a>.
  
 For an implementation of various oligo kernel functions for the Shark library 
@@ -365,7 +365,7 @@ ICANN 2006,  pp. 369-381, 2007</div>
 <h3>Source code</h3> 
  
 There are  an example program
-for  the <math>(1+1)</math>-CMA-ES in the <a href="http://shark-project.sourceforge.net">Shark
+for  the <math>(1+1)</math>-CMA-ES in the <a href="http://www.shark-ml.org">Shark
 library</a>.
  
 <h3>Papers describing the algorithm</h3> 
@@ -408,13 +408,13 @@ Hypervolume]"><p  style="line-height:normal">The covariance matrix adaptation ev
   
 <h3>Source code</h3> 
  
-<!-- You need the <a href="http://shark-project.sourceforge.net">Shark
+<!-- You need the <a href="http://www.shark-ml.org">Shark
 library</a> to run the example
 in <a href="CMA/MOCMAExample.tgz">MOCMAExample.tgz</a>, see the READ.ME
 file in the archive. Updated examples are provided in the examples
-directory of the <a href="http://shark-project.sourceforge.net">Shark
+directory of the <a href="http://www.shark-ml.org">Shark
 library</a>. -->
-The MO-CMA-ES is part of the <a href="http://shark-project.sourceforge.net">Shark
+The MO-CMA-ES is part of the <a href="http://www.shark-ml.org">Shark
 library</a>. There is a tutorial and an example program that can serve
 as starting points for using the MO-CMA-ES.
 
@@ -451,7 +451,7 @@ weight-backtracking heuristic considering both
 the evolution of the partial derivatives and the value of the objective function. 
  
 <h3>Source code</h3> 
-The Rprop algorithms are implemented in the <a href="http://shark-project.sourceforge.net">Shark
+The Rprop algorithms are implemented in the <a href="http://www.shark-ml.org/">Shark
 library</a>, which comes with several examples using the Rprop for optimization.
  
 <h3>References</h3> 
