--- a/publications.html
+++ b/publications.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -779,7 +780,7 @@ href="http://www.ini.rub.de/PEOPLE/glasmtbl/">Tobias
 Glasmachers</a>.  <a href="http://jmlr.csail.mit.edu/papers/volume9/igel08a/igel08a.pdf">Shark</a>.
 <em>Journal of Machine Learning Research</em> <vol>9</vol>, pp. 993-996,
 2008
-<a href="http://shark-project.sourceforge.net" class="sup">source code</a></div>
+<a href="http://www.shark-ml.org" class="sup">source code</a></div>
 
 <div class=publication><a href="http://www.ini.ruhr-uni-bochum.de/institute/people/susanne.winter.html.en">Susanne
 Winter</a>, Bernhard Brendel, Ioannis Pechlivanis, Kirsten Schmieder,
