--- a/downloads.html
+++ b/downloads.html
@@ -12,7 +12,6 @@
   <a href="index.html">About</a>
   <a href="publications.html">Publications</a>
   <a href="downloads.html">Downloads</a>
-
 <div class="sidenavsub">
   <a href="#bufferkdtree">bufferkdtree</a>
   <a href="#Shark">Shark</a>
@@ -24,6 +23,8 @@
   <a href="#MOCMA">MO-CMA</a>
   <a href="#Rprop">Rprop</a>
 </div>
+  <a href="http://ai.ku.dk">AI Centre</a>
+  <a href="https://di.ku.dk/english/research/machine-learning">ML Section</a>
 </div>
 
 <div id="inner-page">
