--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <a href="index.html">About</a>
   <a href="publications.html">Publications</a>
   <a href="downloads.html">Downloads</a>
-  <a href="http://ai.ku.dk">SCIENCE AI Centre</a>
-  <a href="https://di.ku.dk/english/research/machine-learning">DIKU ML Section</a>
+  <a href="http://ai.ku.dk">AI Centre</a>
+  <a href="https://di.ku.dk/english/research/machine-learning">ML Section</a>
 </div>
 <div id="inner-page">
 <p><img src="images/CSUPicture.jpeg" style="height: 180px;
