--- a/publications.html
+++ b/publications.html
@@ -14,6 +14,8 @@
   <a href="index.html">About</a>
   <a href="publications.html">Publications</a>
   <a href="downloads.html">Downloads</a>
+  <a href="http://ai.ku.dk">AI Centre</a>
+  <a href="https://di.ku.dk/english/research/machine-learning">ML Section</a>
 </div>
 <div id="inner-page">
 
