--- a/publications.html
+++ b/publications.html
@@ -27,10 +27,17 @@ scholar profile</a>.
 <a name="publications"></a>
 <h3>Contributions to journals, books, and conferences</h3>
 
-<!-- <h4>Coming soon</h4><a name="top"></a> 
--->
+<h4>Coming soon</h4><a name="top"></a> 
 
-
+<div class=publication>
+Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
+  Sebastien Ourselin, Stefan Sommer, Mads Nielsen, Christian Igel,
+  Akshay Pai.
+  PADDIT: Probabilistic Augmentation of Data using Diffeomorphic Image
+  Transformation.
+   In:  <em>SPIE
+  Medical Imaging 2018</em>, accepted
+</div>
 
 
 
@@ -70,7 +77,7 @@ Population-Contrastive-Divergence: Does Consistency help with RBM training?
   (KDD)</em>, pp. 1445-1454, ACM Press, 2018
 </div>
 
-
+  
 <div class=publication>
 Jan Kremer, Fei Sha, and Christian Igel. <a href="http://proceedings.mlr.press/v84/kremer18a/kremer18a.pdf">Robust Active Label Correction</a>. <em>International Conference on 
 Artificial Intelligence and Statistics (AISTATS), Proceedings of Machine Learning Research</em>
