--- a/publications.html
+++ b/publications.html
@@ -30,6 +30,21 @@ scholar profile</a>.
 <h4>Coming soon</h4><a name="top"></a> 
 
 <div class=publication>
+Saeed Shakibfar,
+Oswin Krause, 
+Casper Lund-Andersen, 
+Alfonso Aranda Hernandez, 
+Jonas Moll, 
+Tariq Osman Andersen, 
+Jesper Hastrup Svendsen, 
+Helen Høgh Petersen, and
+Christian Igel.
+Predicting Electrical Storms by Remote Monitoring of Implantable
+Cardioverter Defibrillator Patients Using Machine Learning.
+<em>EP Europace</em>, accepted
+</div>
+
+<div class=publication>
 Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
   Sebastien Ourselin, Stefan Sommer, Mads Nielsen, Christian Igel,
   Akshay Pai.
@@ -38,7 +53,6 @@ Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
    In:  <em>SPIE
   Medical Imaging 2018</em>, accepted
 </div>
-
 
 
 
