--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@ Professor, Dr. habil.
 	<td>Email:</td>
 	<td><a href="index.html#" onclick="this.href= 'mai' + 'lto:' + 'igel' + '&#64;' + 'diku.dk' ; return true;">igel<!-- @@@ -->&#64;<!-- @@@ -->diku<!-- nospam -->.<!-- nomorespam -->dk</a></td>
       </tr>
-<!--      <tr>
+      <tr>
         <td>Office:</td>
-	<td>HC&Oslash; - Building E, Office 4.0.2</td>
-      </tr> -->
+	<td>Universitetsparken 1 , room 1.2.20</td>
+      </tr> 
       <!-- <tr>
         <td>Phone:</td>
 	<td>(+45) 35321414</td>
@@ -79,7 +79,7 @@ and an Associate Editor of the <a
 href="https://www.mitpressjournals.org/loi/evco">Evolutionary
 Computation Journal</a> (ECJ) and the <a href="https://www.journals.elsevier.com/artificial-intelligence/">Artificial Intelligence Journal</a> (AIJ).</p>
 
-I am constituent CEO of the <a href="http://ai.ku.dk">SCIENCE AI Centre</a>.
+I am director of the <a href="http://ai.ku.dk">SCIENCE AI Centre</a>.
 
 
 <h3>Research Interests</h3>
@@ -103,6 +103,20 @@ href="publications.html">full list</a>.
 I also  maintain a <a href="http://scholar.google.dk/citations?user=d-jF4zIAAAAJ">Google
 scholar profile</a>.
 <p>
+
+<div class=publication>
+  Fabian Gieseke and Christian Igel.
+  <a href="https://dl.acm.org/citation.cfm?doid=3219819.3220124>Training Big Random Forests with Little Resources</a>.
+  <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining
+  (KDD)</em>, pp. 1445-1454, ACM Press, 2018
+</div>
+
+<div class=publication>
+Jan Kremer, Fei Sha, and Christian Igel. <a href="http://proceedings.mlr.press/v84/kremer18a/kremer18a.pdf">Robust Active Label Correction</a>. <em>International Conference on 
+Artificial Intelligence and Statistics (AISTATS), Proceedings of Machine Learning Research</em>
+  <vol>84</vol>, 2018
+</div>
+
 
 <div class=publication>
 Niklas Thiemann, Christian Igel, Olivier Wintenberger, and Yevgeny Seldin. 
