--- a/publications.html
+++ b/publications.html
@@ -29,6 +29,7 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a> 
 
+  
 <div class=publication>
 Saeed Shakibfar,
 Oswin Krause, 
@@ -39,14 +40,14 @@ Tariq Osman Andersen,
 Jesper Hastrup Svendsen, 
 Helen Høgh Petersen, and
 Christian Igel.
-Predicting Electrical Storms by Remote Monitoring of Implantable
-Cardioverter Defibrillator Patients Using Machine Learning.
-<em>EP Europace</em>, accepted
+<a href="https://doi.org/10.1093/europace/euy257">Predicting Electrical Storms by Remote Monitoring of Implantable
+Cardioverter Defibrillator Patients Using Machine Learning</a>.
+<em>EP Europace</em>, 2018 (online version)
 </div>
 
 <div class=publication>
 Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
-  Sebastien Ourselin, Stefan Sommer, Mads Nielsen, Christian Igel,
+  Sebastien Ourselin, Stefan Sommer, Mads Nielsen, Christian Igel, and
   Akshay Pai.
   PADDIT: Probabilistic Augmentation of Data using Diffeomorphic Image
   Transformation.
@@ -54,6 +55,12 @@ Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
   Medical Imaging 2018</em>, accepted
 </div>
 
+
+<div class=publication>
+Thorbjørn Louring Koch, Mathias Perslev, Christian Igel, and Sami Sebastian Brandt 
+Accurate Segmentation of Dentak Panoramic Radiographs with U-Nets. 
+In: <em>IEEE International Symposium on Biomedical Imaging (ISBI)</em>, accepted 
+</div>
 
 
 
@@ -86,7 +93,7 @@ Population-Contrastive-Divergence: Does Consistency help with RBM training?
 
 <div class=publication>
   Fabian Gieseke and Christian Igel.
-  Training Big Random Forests with Little Resources.
+  <a href="https://dl.acm.org/citation.cfm?doid=3219819.3220124>Training Big Random Forests with Little Resources</a>.
   <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining
   (KDD)</em>, pp. 1445-1454, ACM Press, 2018
 </div>
