--- a/publications.html
+++ b/publications.html
@@ -57,8 +57,8 @@ Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
 
 
 <div class=publication>
-Thorbjørn Louring Koch, Mathias Perslev, Christian Igel, and Sami Sebastian Brandt 
-Accurate Segmentation of Dentak Panoramic Radiographs with U-Nets. 
+Thorbjørn Louring Koch, Mathias Perslev, Christian Igel, and Sami Sebastian Brandt.
+Accurate Segmentation of Dental Panoramic Radiographs with U-Nets. 
 In: <em>IEEE International Symposium on Biomedical Imaging (ISBI)</em>, accepted 
 </div>
 
