--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ scholar profile</a>.
 
 <div class=publication>
   Fabian Gieseke and Christian Igel.
-  <a href="https://dl.acm.org/citation.cfm?doid=3219819.3220124>Training Big Random Forests with Little Resources</a>.
+  <a href="https://dl.acm.org/citation.cfm?doid=3219819.3220124">Training Big Random Forests with Little Resources</a>.
   <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining
   (KDD)</em>, pp. 1445-1454, ACM Press, 2018
 </div>
