--- a/publications.html
+++ b/publications.html
@@ -93,7 +93,7 @@ Population-Contrastive-Divergence: Does Consistency help with RBM training?
 
 <div class=publication>
   Fabian Gieseke and Christian Igel.
-  <a href="https://dl.acm.org/citation.cfm?doid=3219819.3220124>Training Big Random Forests with Little Resources</a>.
+  <a href="https://dl.acm.org/citation.cfm?doid=3219819.3220124">Training Big Random Forests with Little Resources</a>.
   <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining
   (KDD)</em>, pp. 1445-1454, ACM Press, 2018
 </div>
