--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ Professor, Dr. habil.
   <table cellspacing="0" cellpadding="0" nosave="">
     <tbody>
       <tr><td>Office address:</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Mail address:</tr>
-      <tr><td>University of Copenhagen</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>University of Copenhagen</td></tr>
       <tr><td>Department of Computer Science</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Department of Computer Science</td></tr>
-      <tr><td>Universitetsparken 1</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Universitetsparken 5</td></tr>
+      <tr><td>University of Copenhagen</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>University of Copenhagen</td></tr>
+      <tr><td>Universitetsparken 1, room 1.2.20</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Universitetsparken 5</td></tr>
       <tr><td>2100 K&#248;benhavn &Oslash;</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>2100 K&#248;benhavn &Oslash;</td></tr>
     </tbody>
   </table>
@@ -50,8 +50,8 @@ Professor, Dr. habil.
 	<td><a href="index.html#" onclick="this.href= 'mai' + 'lto:' + 'igel' + '&#64;' + 'diku.dk' ; return true;">igel<!-- @@@ -->&#64;<!-- @@@ -->diku<!-- nospam -->.<!-- nomorespam -->dk</a></td>
       </tr>
       <tr>
-        <td>Office:</td>
-	<td>Universitetsparken 1 , room 1.2.20</td>
+ <!--       <td>Office:</td>
+	<td>Universitetsparken 1, room 1.2.20</td>-->
       </tr> 
       <!-- <tr>
         <td>Phone:</td>
