--- a/publications.html
+++ b/publications.html
@@ -31,21 +31,6 @@ scholar profile</a>.
 
   
 <div class=publication>
-Saeed Shakibfar,
-Oswin Krause, 
-Casper Lund-Andersen, 
-Alfonso Aranda Hernandez, 
-Jonas Moll, 
-Tariq Osman Andersen, 
-Jesper Hastrup Svendsen, 
-Helen Høgh Petersen, and
-Christian Igel.
-<a href="https://doi.org/10.1093/europace/euy257">Predicting Electrical Storms by Remote Monitoring of Implantable
-Cardioverter Defibrillator Patients Using Machine Learning</a>.
-<em>EP Europace</em>, 2018 (online version)
-</div>
-
-<div class=publication>
 Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
   Sebastien Ourselin, Stefan Sommer, Mads Nielsen, Christian Igel, and
   Akshay Pai.
@@ -61,6 +46,28 @@ Thorbjørn Louring Koch, Mathias Perslev, Christian Igel, and Sami Sebastian Bra
 Accurate Segmentation of Dental Panoramic Radiographs with U-Nets. 
 In: <em>IEEE International Symposium on Biomedical Imaging (ISBI)</em>, accepted 
 </div>
+
+
+
+<a name="y19"></a>
+<h4>2019</h4>
+
+
+<div class=publication>
+Saeed Shakibfar,
+Oswin Krause, 
+Casper Lund-Andersen, 
+Alfonso Aranda Hernandez, 
+Jonas Moll, 
+Tariq Osman Andersen, 
+Jesper Hastrup Svendsen, 
+Helen Høgh Petersen, and
+Christian Igel.
+<a href="https://doi.org/10.1093/europace/euy257">Predicting Electrical Storms by Remote Monitoring of Implantable
+Cardioverter Defibrillator Patients Using Machine Learning</a>.
+<em>EP Europace</em> <vol>21</vol>(2), pp. 268–274, 2019 
+</div>
+
 
 
 
