--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,11 @@ scholar profile</a>.
 
   
 <div class=publication>
+Stephan S. Lorenzen,  Christian Igel, Yevgeny Seldin.
+<a href="https://arxiv.org/abs/1810.09746">On PAC-Bayesian Bounds for Random Forestsi</a>. <em>Machine Learning</em>, accepted
+</div>
+	
+<div class=publication>
 Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
   Sebastien Ourselin, Stefan Sommer, Mads Nielsen, Christian Igel, and
   Akshay Pai.
