--- a/publications.html
+++ b/publications.html
@@ -31,8 +31,8 @@ scholar profile</a>.
 
   
 <div class=publication>
-Stephan S. Lorenzen,  Christian Igel, Yevgeny Seldin.
-<a href="https://arxiv.org/abs/1810.09746">On PAC-Bayesian Bounds for Random Forestsi</a>. <em>Machine Learning</em>, accepted
+Stephan S. Lorenzen,  Christian Igel, and Yevgeny Seldin.
+<a href="https://arxiv.org/abs/1810.09746">On PAC-Bayesian Bounds for Random Forests</a>. <em>Machine Learning</em>, accepted
 </div>
 	
 <div class=publication>
