--- a/publications.html
+++ b/publications.html
@@ -74,7 +74,15 @@ Cardioverter Defibrillator Patients Using Machine Learning</a>.
 </div>
 
 
-
+<div class=publication>
+<a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Cosmin Eugen Oancea, Ashish Mahabal, Christian
+Igel, and Tom Heskes. Bigger Buffer k-d Trees
+  on Multi-Many-Core Systems.
+In: Senger H. et al., eds.:  
+<em>High Performance Computing for Computational Science (VECPAR 2018). </em>,
+LNCS <vol>11333</vol>,
+  pp. 202-214,Springer-Verlag, 2018 <a href="http://bufferkdtree.readthedocs.io" class="sup">source code</a>
+</div>
 
 <a name="y18"></a>
 <h4>2018</h4>
@@ -239,14 +247,6 @@ Prior, and Christian Igel.  <a href="paper/IOoLUSDFEaCfNTM.pdf">Integrated optim
   <vol>54</vol>(6), pp. 3649-3659, 2016
 </div>
 
-
-<div class=publication>
-<a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Cosmin Eugen Oancea, Ashish Mahabal, Christian
-Igel, and Tom Heskes. Bigger Buffer k-d Trees
-on Multi-Many-Core Systems.
-<em>Big Data & Deep Learning in High Performance Computing</em>,
-  pp. 172–180. Springer-Verlag, 2016 <a href="http://bufferkdtree.readthedocs.io" class="sup">source code</a>
-</div>
 
 
 
