--- a/publications.html
+++ b/publications.html
@@ -79,9 +79,9 @@ Cardioverter Defibrillator Patients Using Machine Learning</a>.
 Igel, and Tom Heskes. Bigger Buffer k-d Trees
   on Multi-Many-Core Systems.
 In: Senger H. et al., eds.:  
-<em>High Performance Computing for Computational Science (VECPAR 2018). </em>,
+<em>High Performance Computing for Computational Science (VECPAR 2018)</em>,
 LNCS <vol>11333</vol>,
-  pp. 202-214,Springer-Verlag, 2018 <a href="http://bufferkdtree.readthedocs.io" class="sup">source code</a>
+  pp. 202-214,Springer-Verlag, 2019 <a href="http://bufferkdtree.readthedocs.io" class="sup">source code</a>
 </div>
 
 <a name="y18"></a>
