--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Professor, Dr. habil.
     <tbody>
       <tr>
 	<td>Email:</td>
-	<td><a href="index.html#" onclick="this.href= 'mai' + 'lto:' + 'igel' + '&#64;' + 'diku.dk' ; return true;">igel<!-- @@@ -->&#64;<!-- @@@ -->diku<!-- nospam -->.<!-- nomorespam -->dk</a></td>
+	<td><a href="index.html#" onclick="this.href= 'mai' + 'lto:' + 'igel' + '&#64;' + 'di.ku.dk' ; return true;">igel<!-- @@@ -->&#64;<!-- @@@ -->diku<!-- nospam -->.<!-- nomorespam -->dk</a></td>
       </tr>
       <tr>
  <!--       <td>Office:</td>
