--- a/publications.html
+++ b/publications.html
@@ -30,21 +30,6 @@ scholar profile</a>.
 <h4>Coming soon</h4><a name="top"></a> 
 
   
-<div class=publication>
-Stephan S. Lorenzen,  Christian Igel, and Yevgeny Seldin.
-<a href="https://arxiv.org/abs/1810.09746">On PAC-Bayesian Bounds for Random Forests</a>. <em>Machine Learning</em>, accepted
-</div>
-	
-<div class=publication>
-Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
-  Sebastien Ourselin, Stefan Sommer, Mads Nielsen, Christian Igel, and
-  Akshay Pai.
-  PADDIT: Probabilistic Augmentation of Data using Diffeomorphic Image
-  Transformation.
-   In:  <em>SPIE
-  Medical Imaging 2018</em>, accepted
-</div>
-
 
 <div class=publication>
 Thorbjørn Louring Koch, Mathias Perslev, Christian Igel, and Sami Sebastian Brandt.
@@ -53,10 +38,24 @@ In: <em>IEEE International Symposium on Biomedical Imaging (ISBI)</em>, accepted
 </div>
 
 
+<div class=publication>
+Mathias Perslev,
+    Erik Dam,
+    Akshay Pai, and
+    Christian Igel.
+One Network To Segment Them All: A General, Lightweight System for
+  Accurate 3D Medical Image Segmentation. In:
+<em>Medical Image Computing and Computer Assisted
+  Intervention (MICCAI)</em>, accepted
+</div>
 
 <a name="y19"></a>
-<h4>2019</h4>
 
+<h4>2019</h4>
+<div class=publication>
+Stephan S. Lorenzen,  Christian Igel, and Yevgeny Seldin.
+<a href="https://arxiv.org/abs/1810.09746">On PAC-Bayesian Bounds for Random Forests</a>. <em>Machine Learning</em>, 2019
+</div>
 
 <div class=publication>
 Saeed Shakibfar,
@@ -82,6 +81,16 @@ In: Senger H. et al., eds.:
 <em>High Performance Computing for Computational Science (VECPAR 2018)</em>,
 LNCS <vol>11333</vol>,
   pp. 202-214,Springer-Verlag, 2019 <a href="http://bufferkdtree.readthedocs.io" class="sup">source code</a>
+</div>
+
+<div class=publication>
+Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
+  Sebastien Ourselin, Stefan Sommer, Mads Nielsen, Christian Igel, and
+  Akshay Pai.
+  PADDIT: Probabilistic Augmentation of Data using Diffeomorphic Image
+  Transformation.
+   In:  <em>Medical Imaging 2019: Image Processing</em>, Proceedings
+  of SPIE <vol>10949</vol>, SPIE, 2019
 </div>
 
 <a name="y18"></a>
