--- a/publications.html
+++ b/publications.html
@@ -29,7 +29,14 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a> 
 
-  
+  <div class=publication>
+Saeed Shakibfar, Oswin Krause, Casper Lund-Andersen, Filip Strycko, Jonas Moll, Tariq Osman Andersen, Jesper Hastrup Svendsen, and
+Christian Igel.
+<a>Impact of device programming on the success of the first
+anti-tachycardia pacing therapy: An anonymized large-scale study</a>.
+<em>PLOS ONE</em>, 2019 
+</div>
+
 
 <div class=publication>
 Thorbjørn Louring Koch, Mathias Perslev, Christian Igel, and Sami Sebastian Brandt.
@@ -54,7 +61,8 @@ One Network To Segment Them All: A General, Lightweight System for
 <h4>2019</h4>
 <div class=publication>
 Stephan S. Lorenzen,  Christian Igel, and Yevgeny Seldin.
-<a href="https://arxiv.org/abs/1810.09746">On PAC-Bayesian Bounds for Random Forests</a>. <em>Machine Learning</em>, 2019
+<a href="https://arxiv.org/abs/1810.09746">On PAC-Bayesian Bounds for
+  Random Forests</a>. <em>Machine Learning</em> <vol>108</vol>(8-9), pp. 1503–1522, 2019
 </div>
 
 <div class=publication>
@@ -71,6 +79,9 @@ Christian Igel.
 Cardioverter Defibrillator Patients Using Machine Learning</a>.
 <em>EP Europace</em> <vol>21</vol>(2), pp. 268–274, 2019 
 </div>
+
+
+
 
 
 <div class=publication>
