--- a/publications.html
+++ b/publications.html
@@ -29,13 +29,6 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a> 
 
-  <div class=publication>
-Saeed Shakibfar, Oswin Krause, Casper Lund-Andersen, Filip Strycko, Jonas Moll, Tariq Osman Andersen, Jesper Hastrup Svendsen, and
-Christian Igel.
-<a>Impact of device programming on the success of the first
-anti-tachycardia pacing therapy: An anonymized large-scale study</a>.
-<em>PLOS ONE</em>, 2019 
-</div>
 
 
 <div class=publication>
@@ -64,6 +57,16 @@ Stephan S. Lorenzen,  Christian Igel, and Yevgeny Seldin.
 <a href="https://arxiv.org/abs/1810.09746">On PAC-Bayesian Bounds for
   Random Forests</a>. <em>Machine Learning</em> <vol>108</vol>(8-9), pp. 1503–1522, 2019
 </div>
+
+  <div class=publication>
+Saeed Shakibfar, Oswin Krause, Casper Lund-Andersen, Filip Strycko, Jonas Moll, Tariq Osman Andersen, Helen Høgh Petersen, Jesper Hastrup Svendsen, and
+Christian Igel.
+<a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0219533">Impact of device programming on the success of the first
+anti-tachycardia pacing therapy: An anonymized large-scale study</a>.
+<em>PLoS ONE</em> <vol>14</vol>(8):
+e0219533, 2019
+</div>
+
 
 <div class=publication>
 Saeed Shakibfar,
