--- a/publications.html
+++ b/publications.html
@@ -31,11 +31,6 @@ scholar profile</a>.
 
 
 
-<div class=publication>
-Thorbjørn Louring Koch, Mathias Perslev, Christian Igel, and Sami Sebastian Brandt.
-Accurate Segmentation of Dental Panoramic Radiographs with U-Nets. 
-In: <em>IEEE International Symposium on Biomedical Imaging (ISBI)</em>, accepted 
-</div>
 
 
 <div class=publication>
@@ -83,10 +78,6 @@ Cardioverter Defibrillator Patients Using Machine Learning</a>.
 <em>EP Europace</em> <vol>21</vol>(2), pp. 268–274, 2019 
 </div>
 
-
-
-
-
 <div class=publication>
 <a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Cosmin Eugen Oancea, Ashish Mahabal, Christian
 Igel, and Tom Heskes. Bigger Buffer k-d Trees
@@ -96,6 +87,14 @@ In: Senger H. et al., eds.:
 LNCS <vol>11333</vol>,
   pp. 202-214,Springer-Verlag, 2019 <a href="http://bufferkdtree.readthedocs.io" class="sup">source code</a>
 </div>
+
+<div class=publication>
+Thorbjørn Louring Koch, Mathias Perslev, Christian Igel, and Sami Sebastian Brandt.
+Accurate Segmentation of Dental Panoramic Radiographs with U-Nets. 
+In: <em>IEEE International Symposium on Biomedical Imaging
+  (ISBI)</em>, pp. 15-19, 2019
+</div>
+
 
 <div class=publication>
 Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
