--- a/publications.html
+++ b/publications.html
@@ -29,9 +29,12 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a> 
 
-
-
-
+<div class=publication>
+Mauricio Orbes-Arteaga, Jorge Cardoso, Lauge Sørensen, Christian Igel,
+  Sebastien Ourselin, Marc Modat, Mads Nielsen, and Akshay Pai.
+  Knowledge distillation for semi-supervised domain adaptation.
+<em>Machine Learnig in Clinical Neuroimaging (MLCN 2019)</em>, accepted
+</div>
 
 <div class=publication>
 Mathias Perslev,
@@ -92,7 +95,7 @@ LNCS <vol>11333</vol>,
 Thorbjørn Louring Koch, Mathias Perslev, Christian Igel, and Sami Sebastian Brandt.
 Accurate Segmentation of Dental Panoramic Radiographs with U-Nets. 
 In: <em>IEEE International Symposium on Biomedical Imaging
-  (ISBI)</em>, pp. 15-19, 2019
+  (ISBI)</em>, pp. 15-19, IEEE Press, 2019
 </div>
 
 
