--- a/publications.html
+++ b/publications.html
@@ -30,6 +30,18 @@ scholar profile</a>.
 <h4>Coming soon</h4><a name="top"></a> 
 
 <div class=publication>
+  Mathias Perslev,
+Michael Hejselbak Jensen,
+Sune Darkner,
+Poul Jørgen Jennum, and
+Christian Igel. 
+U-Time: A Fully Convolutional Network for Time Series Segmentation
+  Applied to Sleep Staging.
+  <em>Advances in Neural Information Processing Systems
+  (NeurIPS 2019)</em>, accepted
+  </div>
+  
+<div class=publication>
 Mauricio Orbes-Arteaga, Jorge Cardoso, Lauge Sørensen, Christian Igel,
   Sebastien Ourselin, Marc Modat, Mads Nielsen, and Akshay Pai.
   Knowledge distillation for semi-supervised domain adaptation.
@@ -61,7 +73,7 @@ Saeed Shakibfar, Oswin Krause, Casper Lund-Andersen, Filip Strycko, Jonas Moll, 
 Christian Igel.
 <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0219533">Impact of device programming on the success of the first
 anti-tachycardia pacing therapy: An anonymized large-scale study</a>.
-<em>PLoS ONE</em> <vol>14</vol>(8):
+<em>PLOS ONE</em> <vol>14</vol>(8):
 e0219533, 2019
 </div>
 
